# aws-finops-toolkit

./: .gitignore  CONTRIBUTING.md  HANDOVER.md  LICENSE  PLAN.md  README.md  STATUS.md  pyproject.toml
.claude/agents/: agent-0-pm.md  agent-1-backend.md  agent-2-frontend.md  agent-3-providers.md  agent-4-integration.md  agent-5-qa.md  agent-6-content.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
config/: default.yaml
examples/: ci-integration.md  multi-account.md  single-account.md
migrations/: 001_initial.sql
src/finops/: __init__.py  app.py  aws_client.py  cli.py  config.py  preflight.py  report.py  scanner.py
src/finops/checks/: __init__.py  base.py  cloudwatch_waste.py  ec2_rightsizing.py  elasticache_scheduling.py  nat_gateway.py  rds_rightsizing.py  reserved_instances.py  s3_lifecycle.py  spot_candidates.py  unused_resources.py  vpc_waste.py
src/finops/db/: database.py
src/finops/delegates/: manager.py
src/finops/llm/: base.py  claude.py  openai_provider.py
src/finops/llm/prompts/: budget_advice.txt  cost_recommendation.txt  error_budget_analysis.txt  safety_analysis.txt
src/finops/providers/: base.py
src/finops/providers/aws/: provider.py
src/finops/providers/azure/: provider.py
src/finops/providers/gcp/: provider.py
src/finops/services/: alert_service.py  safety_service.py  scanner_service.py
src/finops/static/css/: app.css
src/finops/templates/: base.html
src/finops/templates/pages/: alerts.html  budgets.html  costs.html  dashboard.html  error_budgets.html  findings.html  import_export.html  incidents.html  onboarding.html  recommendations.html  scans.html  services.html  settings.html
src/finops/web/: deps.py  schemas.py
src/finops/web/routes/: accounts.py  ai.py  alerts.py  budgets.py  costs.py  error_budgets.py  findings.py  import_export.py  incidents.py  pages.py  scans.py  services.py
templates/: report.html.j2
tests/: conftest.py  test_api_endpoints.py  test_checks.py  test_report.py  test_scanner.py
