[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aws-finops-toolkit"
version = "0.2.0"
description = "SRE + FinOps platform — cost optimization gated on error budgets, traffic analysis, and dependency safety"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "June Gu", email = "junegu@example.com"},
]
keywords = ["aws", "finops", "cost-optimization", "cloud", "devops", "sre"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "boto3>=1.28.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "aiosqlite>=0.19.0",
    "sse-starlette>=1.8.0",
    "python-multipart>=0.0.6",
]
ai = [
    "anthropic>=0.40.0",
    "openai>=1.10.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.11.0",
    "flake8>=6.0",
    "mypy>=1.5.0",
    "types-PyYAML>=6.0",
    "moto[ec2,rds,s3,iam,sts,logs,cloudwatch,elbv2,elasticache]>=4.2.0",
    "boto3-stubs[essential]>=1.28.0",
    "httpx>=0.27.0",
]

[project.scripts]
finops = "finops.cli:main"

[project.urls]
Homepage = "https://github.com/junegu/aws-finops-toolkit"
Repository = "https://github.com/junegu/aws-finops-toolkit"
Issues = "https://github.com/junegu/aws-finops-toolkit/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
finops = ["templates/**/*.html", "static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.flake8]
max-line-length = 120
exclude = [".git", "__pycache__", "build", "dist", "venv"]
